# mmplayer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
MMAV/: CMakeLists.txt  MMAV.h  MMAVPacket.cpp  MMAVPacketPrivate.h  MMAVReader.cpp  MMAVReaderPrivate.h
MMPlayer/: CMakeLists.txt  MMPlayer.cpp
MMThread/: CMakeLists.txt  MMThread.cpp  MMThread.h
docs/: ffmpeg.md  ffmpeg编译.md
